# clavamea

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CLAVAMEA_SPEC.md  Cargo.toml  DOCS_VERSIONING.md  Dockerfile  GUIA_RETOMADA.md  LICENSE  Makefile  Makefile.toml  README.md  RESUMPTION_GUIDE.md  docker-compose.yml  test_document.md  whatsapp-issues.md
.github/workflows/: ci.yml  docker-publish.yml
.sqlx/: query-7af19015465e949d45c10f468baa689002ab578eadeef26ff7b2e73b48b8d9c0.json  query-a731e3cc3f85cba67ed329f54a90d730bc72cdcfda61877ea42f22d1b7c08619.json
docs/superpowers/plans/: 2026-04-25-openrouter-router.md  2026-04-25-schedule-web-search.md
docs/superpowers/specs/: 2026-04-25-openrouter-router-design.md  2026-04-25-schedule-web-search-design.md
locales/: en.ftl  pt-BR.ftl
migrations/: 0001_initial_schema.sql  0002_rag_tables.sql  0003_car_management.sql  0004_multiuser_isolation.sql  0005_access_control.sql  0006_user_version_tracking.sql  0007_add_schedules.sql  0008_add_full_name.sql  0009_book_sweden.sql  0011_schedule_search_query.sql  20260322_add_schedules.sql
prompts/: system.txt
scratch/: dump_episodes.rs
scripts/: install-hooks.sh
src/: main.rs
src/bot/: handlers.rs  mod.rs  router.rs  scheduler.rs  state.rs  utils.rs
src/core/: engine.rs  genetics.rs  memory.rs  mod.rs  prompt.rs  rag.rs  renderer.rs  router.rs  storage.rs  tools.rs  wasm.rs
src/db/: connection.rs  migrations.rs  mod.rs  models.rs  queries.rs
src/i18n/: bundle.rs  detection.rs  loader.rs  mod.rs
src/whatsapp/: manager.rs  mod.rs  processor.rs  sender.rs  store.rs  webhook.rs
whatsapp-bridge/: Cargo.toml  Dockerfile
whatsapp-bridge/src/: main.rs
