[package]
name = "clavamea"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "Sovereign, private AI assistant with Telegram interface"
license = "MIT OR Apache-2.0"
repository = ""

[dependencies]
tokio = { version = "1.0", features = ["full"] }
teloxide = { version = "0.13", features = ["macros", "sqlite-storage-nativetls"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "migrate"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
fluent = "0.16"
fluent-bundle = "0.15.3"
fluent-resmgr = "0.0.8"
intl-memoizer = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio-util = "0.7"
async-trait = "0.1"
once_cell = "1.18"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
fastembed = "4.2"
pulldown-cmark = "0.10"
wasmtime = "29.0"
wasmtime-wasi = "29.0"
wat = "1.245"



[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
