[package]
name = "clavamea"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
teloxide = { version = "0.13", features = ["macros", "sqlite-storage-nativetls"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "migrate"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }
once_cell = "1.0"
async-trait = "0.1"
fluent = "0.16"
fluent-bundle = "0.15"
fluent-resmgr = "0.0.5"
intl-memoizer = "0.5"
pulldown-cmark = "0.10"
html2text = "0.12"
fastembed = "5.13"
tempfile = "3.10"
tokio-util = { version = "0.7", features = ["codec"] }
tokio-test = "0.4"
wasmtime = "25.0.0"
wasmtime-wasi = "25.0.0"
wat = "1.214.0"
tower-http = { version = "0.5", features = ["trace"] }

# WhatsApp integration (Integrated)
whatsapp-rust = { git = "https://github.com/oxidezap/whatsapp-rust", tag = "v0.5.0", default-features = false, features = ["moka-cache", "tokio-transport", "tokio-runtime", "ureq-client", "tokio-native", "signal"] }
whatsapp-rust-tokio-transport = { git = "https://github.com/oxidezap/whatsapp-rust", tag = "v0.5.0" }
whatsapp-rust-ureq-http-client = { git = "https://github.com/oxidezap/whatsapp-rust", tag = "v0.5.0" }
# Explicitly add sub-crates to resolve imports in custom store
wacore = { git = "https://github.com/oxidezap/whatsapp-rust", tag = "v0.5.0", default-features = false }
wacore-appstate = { git = "https://github.com/oxidezap/whatsapp-rust", tag = "v0.5.0", default-features = false }
wacore-binary = { git = "https://github.com/oxidezap/whatsapp-rust", tag = "v0.5.0", default-features = false }
waproto = { git = "https://github.com/oxidezap/whatsapp-rust", tag = "v0.5.0", default-features = false }
