[package]
name = "whatsapp-bridge"
version = "0.1.0"
edition = "2024"
description = "WhatsApp Web bridge for ClavaMea"

[dependencies]
whatsapp-rust = { git = "https://github.com/oxidezap/whatsapp-rust", tag = "v0.5.0", default-features = false, features = ["moka-cache", "sqlite-storage", "tokio-transport", "tokio-runtime", "ureq-client", "tokio-native", "signal"] }
whatsapp-rust-tokio-transport = { git = "https://github.com/oxidezap/whatsapp-rust", tag = "v0.5.0" }
whatsapp-rust-ureq-http-client = { git = "https://github.com/oxidezap/whatsapp-rust", tag = "v0.5.0" }
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
anyhow = "1.0"
